# modules

./: .gitignore  CMakeLists.txt  build.ninja  library.cmake  metadata.yaml  module.yaml  modules.cmake  rules.ninja
DistanceSensor/examples/: examples_list.yaml
MPU9250/api/include/: helper_3dmath.h  mpudmp_registers.h
MPU9250/api/src/: MPU9250.cpp  library.cmake
MPU9250/examples/: examples_list.yaml
docs/: distance.md  index  index.md  mpu.md
examples/: DoublePID_example.cpp  MatrixButtons_example.cpp  ServoDriver_example.cpp  distance_basic.cpp  mpu9250_basic.cpp
examples/core2/: DoublePID_example.cpp  ServoDriver_example.cpp  distance_basic.cpp  mpu9250_basic.cpp
examples/core2mini/: mpu9250_basic.cpp
examples/robocore/: MatrixButtons_example.cpp  distance_basic.cpp  mpu9250_basic.cpp
include/: DistanceSensor.h  MPU9250.h  MatrixButtons.cpp  MatrixButtons.h  hDoublePID.h  hDoublePIDRegulator.h  mpudmp.h
include/ServoDriver/: ServoDriver.h
src/: DistanceSensor.cpp  MPU9250.cpp  MatrixButtons.cpp  hDoublePID.cpp  hDoublePIDRegulator.cpp  registers.h
src/ServoDriver/: ServoDriver.cpp
tests/: CMakeLists.txt
